--- a/index.html
+++ b/index.html
@@ -3,16 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crucigrama Didáctico</title>
+    <title>Crucigrama</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Crucigrama Didáctico</h1>
-        <div id="crucigrama"></div>
-        <div id="pistas"></div>
-        <button id="pistaButton" class="button">Mostrar Pista</button>
-        <a id="nextLevelButton" class="button" href="#">Siguiente Nivel</a>
+        <h1>Crucigrama</h1>
+        <button id="start">Iniciar Juego</button>
+        <div class="controls" style="display: none;">
+            <div id="timer">Tiempo: 00:00</div>
+            <div id="score">Puntuación: 0</div>
+            <button id="submit">Enviar</button>
+        </div>
+        <table id="crossword" style="display: none;">
+            <!-- Aquí va tu crucigrama -->
+            <tr>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+            </tr>
+            <tr>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+            </tr>
+            <tr>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+                <td><input type="text" maxlength="1"></td>
+            </tr>
+        </table>
+        <div class="next-level" style="display: none;">
+            <h2>Felicidades!</h2>
+            <p>Has completado el crucigrama correctamente.</p>
+            <button id="next-level">Siguiente Nivel</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
